DFHack Future
    Internals
        A method for caching screen output is now available to Lua (and C++)
        Developer plugins can be ignored on startup by setting the DFHACK_NO_DEV_PLUGINS environment variable
        The console on Linux and OS X now recognizes keyboard input between prompts
    Lua
    New internal commands
    New plugins
    New scripts
        view-item-info: adds information and customisable descriptions to item viewscreens
    New tweaks
    New features
        dwarfmonitor date format can be modified (see Readme)
    Fixes
        steam-engine: fixed a crash on arena load
        Plugins with vmethod hooks can now be reloaded on OS X
        Lua's os.system() now works on OS X
        Fixed default arguments in Lua gametype detection functions
        gui/hack-wish now properly assigns quality to items.
        tweak fps-min fixed
    Misc Improvements
        "keybinding list" accepts a context
        nyan: Can now be stopped with dfhack-run
        quicksave: Restricted to fortress mode
    Removed

DFHack 0.40.24-r3
    Internals
        Ruby library now included on OS X - ruby scripts should work on OS X 10.10
        libstdc++ should work with older versions of OS X
        Added support for onLoadMap/onUnloadMap.init scripts
        game type detection functions are now available in the World module
        The DFHACK_LOG_MEM_RANGES environment variable can be used to log information to stderr.log on OS X
        Fixed adventure mode menu names
        Fixed command usage information for some commands
    Lua
        Lua scripts will only be reloaded if necessary
        Added a df2console() wrapper, useful for printing DF (CP437-encoded) text to the console in a portable way
        Added a strerror() wrapper
    New internal commands
        hide/show: hide and show the console on Windows
        sc-script: Allows additional scripts to be run when certain events occur (similar to onLoad*.init scripts)
    New plugins